config/basic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vllm-llama3-8b-instruct-lb
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: vllm-llama3-8b-instruct-lb
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: vllm-llama3-8b-instruct-lb
    spec:
      containers:
      - args:
        - --model
        - meta-llama/Llama-3.1-8B-Instruct
        - --tensor-parallel-size
        - "1"
        - --port
        - "8000"
        - --enable-lora
        - --max-loras
        - "4"
        - --max-cpu-loras
        - "12"
        command:
        - python3
        - -m
        - vllm.entrypoints.openai.api_server
        image: vllm/vllm-openai:latest
        imagePullPolicy: Always
        lifecycle:
          preStop:
            sleep:
              seconds: 30
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /health
            port: http
            scheme: HTTP
          periodSeconds: 1
          successThreshold: 1
          timeoutSeconds: 1
        name: lora
        ports:
        - containerPort: 8000
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 1
          httpGet:
            path: /health
            port: http
            scheme: HTTP
          periodSeconds: 1
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            nvidia.com/gpu: "1"
          requests:
            nvidia.com/gpu: "1"
        startupProbe:
          failureThreshold: 600
          httpGet:
            path: /health
            port: http
            scheme: HTTP
          initialDelaySeconds: 2
          periodSeconds: 1
          successThreshold: 1
          timeoutSeconds: 1
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: data
        - mountPath: /dev/shm
          name: shm
        - mountPath: /adapters
          name: adapters
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 130
      volumes:
      - emptyDir: {}
        name: data
      - emptyDir:
          medium: Memory
        name: shm
      - emptyDir: {}
        name: adapters
      - configMap:
          defaultMode: 420
          name: vllm-llama3.1-8b-adapters
        name: config-volume
