config/daemonset_gke_dcgm.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: custom-dcgm-exporter
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: custom-gke-dcgm-exporter
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
      labels:
        app.kubernetes.io/name: custom-gke-dcgm-exporter
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: cloud.google.com/gke-accelerator
                operator: Exists
              - key: cloud.google.com/gke-gpu-driver-version
                operator: In
                values:
                - default
                - latest
      automountServiceAccountToken: false
      containers:
      - args:
        - --enable-dcgm-log
        - --dcgm-log-level
        - ERROR
        image: gcr.io/gke-release/nvidia/gke-dcgm-exporter:4.2.3-4.1.3-gke.6
        imagePullPolicy: IfNotPresent
        name: dcgm-exporter
        ports:
        - containerPort: 9400
          name: metrics
          protocol: TCP
        resources:
          limits:
            memory: 350Mi
          requests:
            cpu: 100m
            memory: 350Mi
        securityContext:
          privileged: true
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /etc/dcgm-exporter
          name: dcgm-exporter-metrics
          readOnly: true
        - mountPath: /usr/local/nvidia
          name: nvidia-install-dir-host
          readOnly: true
        - mountPath: /var/lib/kubelet/pod-resources
          name: pod-resources
          readOnly: true
      priorityClassName: system-node-critical
      restartPolicy: Always
      tolerations:
      - operator: Exists
      - key: components.gke.io/gke-managed-components
        operator: Exists
      volumes:
      - hostPath:
          path: /home/kubernetes/bin/nvidia
          type: Directory
        name: nvidia-install-dir-host
      - configMap:
          defaultMode: 420
          name: custom-dcgm-exporter-metrics
        name: dcgm-exporter-metrics
      - hostPath:
          path: /var/lib/kubelet/pod-resources
          type: Directory
        name: pod-resources
      - hostPath:
          path: /var/lib/kubelet/device-plugins
          type: Directory
        name: device-plugins
      - hostPath:
          path: /etc/nvidia
          type: DirectoryOrCreate
        name: nvidia-config
  updateStrategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
