config/deploy_vllm_bench.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: vllm-bench
    annotations:
spec:
    podManagementPolicy: Parallel
    replicas: 6
    selector:
      matchLabels:
        app: vllm-bench
    updateStrategy:
      rollingUpdate:
        maxUnavailable: 100%
    template:
      metadata:
        labels:
          app: vllm-bench
          rev: "4"
      spec:
        tolerations:
        - effect: NoSchedule
          key: nvidia.com/gpu
          operator: Exists

        terminationGracePeriodSeconds: 10

        containers:
        - name: vllm
          image: gcr.io/claytoncoleman-gke-dev/github.com/smarterclayton/vllm-dp-lws:cpu
          imagePullPolicy: Always
          workingDir: /code
          command:
          - /bin/bash
          - -c
          - |
            [...]
          - ""

          terminationMessagePolicy: FallbackToLogsOnError

          securityContext:
            runAsUser: 0  # needed for RH image to be able to override files (runs as vllm)
          resources:
            requests:
              cpu: 8
              memory: 32Gi
