config/deploy_vllm_benchmark.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: vllm-benchmark
    annotations:
spec:
    replicas: 6
    selector:
      matchLabels:
        app: vllm-benchmark
    template:
      metadata:
        labels:
          app: vllm-benchmark
          llm-d.ai/role: benchmark
      spec:
        tolerations:
        - effect: NoSchedule
          key: nvidia.com/gpu
          operator: Exists

        containers:
        - name: vllm
          image: gcr.io/claytoncoleman-gke-dev/github.com/smarterclayton/vllm-dp-lws:cpu
          imagePullPolicy: Always
          workingDir: /code
          command:
          - /bin/bash
          - -c
          - |
            [...]
          - ""
          - vllm

          terminationMessagePolicy: FallbackToLogsOnError

          securityContext:
            runAsUser: 0  # needed for RH image to be able to override files (runs as vllm)
          resources:
            requests:
              cpu: 8
              memory: 32Gi
