config/deploy_vllm_repro_ubuntu.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vllm-repro-ubuntu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vllm-repro-ubuntu
  podManagementPolicy: Parallel
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        server: vllm
        app: vllm-repro-ubuntu
    spec:
      terminationGracePeriodSeconds: 2
      containers:
      - name: vllm-worker
        image: 
          gcr.io/claytoncoleman-gke-dev/github.com/smarterclayton/vllm-dp-lws:release-v0.11.0
        imagePullPolicy: Always
        workingDir: /code
        stdin: true
        tty: true
        command: 
        - /bin/bash
        - -c
        - |
          [...]
        securityContext:
          runAsUser: 0  # needed for RH image to be able to override files (runs as vllm)
          # NVSHMEM IBGDA requires CAP_SYS_ADMIN or nvidia.ko to have PeerMappingOverride=1 set
          # Since PeerMappingOverride allows workloads to potential impact each other on the
          # same host, privileged is no less secure.
          privileged: true # needed to open the host device for UAR ??
          capabilities:
            add:
            - "IPC_LOCK"
            - "SYS_RAWIO"
        resources:
          limits:
            ephemeral-storage: 3Ti
            nvidia.com/gpu: "8"
          requests:
            cpu: 32
            memory: 512Gi
            ephemeral-storage: 3Ti
            nvidia.com/gpu: "8"
        volumeMounts:
          - name: shm
            mountPath: /dev/shm
          - name: init-scripts-volume
            mountPath: /init-scripts
          - name: hf-cache
            mountPath: /huggingface-cache
          - name: nv-compute-cache
            mountPath: /root/.nv/ComputeCache
          - name: vllm
            mountPath: /code
          # Required to access the gIB configuration for NCCL on GKE
          #- mountPath: /usr/local/gib
          #  name: gib

      volumes:
        - name: init-scripts-volume
          configMap:
            name: vllm-init-scripts-config
            defaultMode: 0755
            optional: true
        - name: shm
          emptyDir:
            medium: Memory
            sizeLimit: 1Gi
        - name: hf-cache
          emptyDir: {}
        - name: nv-compute-cache
          emptyDir: {}
        - name: vllm
          emptyDir: {}
