config/root_pod.yaml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: root
spec:
  selector:
    matchLabels:
      app: root-shell
  template:
    metadata:
      labels:
        app: root-shell
    spec:
      hostPID: true
      #nodeSelector:
        #kubernetes.io/hostname: gke-gke-a4-swap-a4-highgpu-8g-a4-pool-f1210e0a-ntsf
      tolerations:
      - effect: NoSchedule
        key: nvidia.com/gpu
        operator: Exists
      containers:
      - name: shell
        image: ubuntu:22.04
          #gke.gcr.io/pause:3.8
        command:
        - /bin/bash
        - -c
        - |
          [...]
        volumeMounts:
        # change this to / to be in the root shell
        - mountPath: /root
          name: root
        - name: kernel-debug
          mountPath: /sys/kernel/debug
        securityContext:
          runAsUser: 0
          privileged: true
      terminationGracePeriodSeconds: 2
      volumes:
      - name: root
        hostPath:
          path: /
      # Allows bpftrace programming
      - name: kernel-debug
        hostPath:
          path: /sys/kernel/debug
          type: ""
