config/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: igw
spec:
  gatewayClassName: gke-l7-rilb
  listeners:
    - protocol: HTTP
      port: 80
      name: http
