config/gateway_llama3_8b_instruct.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: igw-llama3-8b-instruct
spec:
  gatewayClassName: gke-l7-rilb
  listeners:
    - protocol: HTTP
      port: 80
      name: http
