config/gateway_deepseek_ep.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: igw-deepseek-ep
spec:
  gatewayClassName: gke-l7-rilb
  listeners:
    - protocol: HTTP
      port: 80
      name: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: igw-deepseek-ep
spec:
  parentRefs:
  - name: igw-deepseek-ep
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: vllm-deepseek-ep
      group: inference.networking.k8s.io
      kind: InferencePool
