config/gateway_qwen3_30b_a3b.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: igw-qwen3-30b-a3b
spec:
  gatewayClassName: gke-l7-rilb
  listeners:
    - protocol: HTTP
      port: 80
      name: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: igw-qwen3-30b-a3b
spec:
  parentRefs:
  - name: igw-qwen3-30b-a3b
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: vllm-qwen3-30b-a3b
      group: inference.networking.x-k8s.io
      kind: InferencePool
