config/httproute_deepseek_r1_ep.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: deepseek-r1-ep
spec:
  parentRefs:
  - name: igw-deepseek-r1-ep
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: vllm-deepseek-r1-ep
      group: inference.networking.x-k8s.io
      kind: InferencePool
