config/httproute_llama3_8b_instruct.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vllm
spec:
  parentRefs:
  - name: igw-llama3-8b-instruct
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: vllm-llama3-8b-instruct
      group: inference.networking.x-k8s.io
      kind: InferencePool
