config/svc_only.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: e2e-gateway
spec:
  gatewayClassName: gke-l7-regional-external-managed
  listeners:
  - name: http
    protocol: HTTP
    port: 80
---
kind: Service
apiVersion: v1
metadata:
  name: vllm
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: vllm-llama2-7b
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: vllm
spec:
  parentRefs:
    - kind: Gateway
      name: e2e-gateway
  rules:
    - backendRefs:
      - name: vllm
        port: 80
      matches:
      - path:
          value: /
